updated app.properties passcode

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/animeDb?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=BE69420MySQL69@08082801
+spring.datasource.password=(your-db-passcode)
 spring.datasource.driver-class-userName=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
 
