--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/animeDb?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=(your-db-passcode)
+spring.datasource.username=your_database_access_username
+spring.datasource.password=your_database_access_password
 spring.datasource.driver-class-userName=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
 
